Fixed gap between pre tags and cleaned up code

--- a/console/themes/basetheme.css
+++ b/console/themes/basetheme.css
@@ -1,39 +1,26 @@
 body {
-  vertical-align:middle;
   font-size:13px;
 }
 pre {
-  margin-bottom:0px;
-  position:relative;
+  margin:0px;
   word-break: break-all;
   white-space: pre-wrap;
-  overflow: hidden;
   font-family: Courier, monospace;
 }
-.fadeout {
-  animation: fadeout 1.1s ease;
-}
-@keyframes fadeout {
-  to {
-    opacity: 0;
-    background-color: white;
-  }
-}
-#console-text {
-  /* FIXES SMALL GAP BETWEEN PRE TAGS */
-  margin-bottom: -0.17em;
-}
-#inputline {
-  margin-top:0px;
-}
 .console-container {
-  margin-left:8px;
+  margin:14px 8px;
+}
+#caretcontainer {
+  position: relative;
 }
 #caret {
-  position:relative;
+  position:absolute;
   user-select:none;
+  top:-1px;
 }
 #caret {
   animation:caret .75s step-end infinite;
 }
+.fadeout {animation: fadeout 1.1s ease;}
 @keyframes caret { from, to { color: transparent } 50% { color: inherit; }}
+@keyframes fadeout {to {opacity: 0;background-color: white;}}
